--- a/test-ui/src/App.css
+++ b/test-ui/src/App.css
@@ -9,6 +9,26 @@ body {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
+/* thead {
+  top:0;
+  z-index: 10;
+  background: white;
+  width: 100%;
+} */
+.MuiTableHead-root-78 {
+  display: table-header-group;
+  border-bottom: 0.1px solid lightgrey;
+}
+thead, tbody { display: block; }
+
+tbody {
+    height: 100px;       /* Just for the demo          */
+    overflow-y: auto;    /* Trigger vertical scroll    */
+    overflow-x: hidden;  /* Hide the horizontal scroll */
+}
+.RenderData-tableWrapper-42 {
+  overflow-x: unset;
+}
 
 .App-header {
   background-color: #222;
@@ -16,7 +36,18 @@ body {
   padding: 20px;
   color: white;
 }
-
+.RenderData-root-40{
+  margin-top: 0!important;
+}
+.MuiTablePagination-root-93{
+  overflow: hidden;
+  position: sticky;
+  background: white;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  height: 100px;
+}
 .App-title {
   font-size: 1.5em;
 }
